Fix Scrollbar in events
Reviewed-on: http://gerrit.tine20.com/customers/3043
Tested-by: Jenkins CI (http://ci.tine20.com/)

--- a/tine20/Calendar/css/daysviewpanel.css
+++ b/tine20/Calendar/css/daysviewpanel.css
@@ -236,7 +236,7 @@
     border-radius: 8px;
     position: absolute;
     border: 1px solid #808080;
-    overflow-y: hidden;
+    overflow: hidden;
 
     text-align: left;
     color:black;
